# src/routes/recipes.py
@@ -1,12 +1,13 @@
-from typing import Annotated, List, Tuple
+from typing import Annotated, List, Optional, Tuple
 
-from fastapi import APIRouter, Depends, HTTPException
+from fastapi import APIRouter, Depends, File, HTTPException, UploadFile
 from fastapi_keycloak import OIDCUser
 
 from .. import models, schemas
 from ..auth_utils import get_current_user, get_current_user_with_roles
 from ..repositories import get_recipe_repository
 from ..repositories.recipe import CRUDRecipe
+from ..minio_client import upload_recipe_image as upload_image
 
 router = APIRouter(
     prefix="/recipes",
@@ -15,13 +16,31 @@ router = APIRouter(
 
 @router.post("", operation_id="create_recipe")
 def create_recipe(
-    recipe: schemas.RecipeCreate,
+    name: str,
+    situation: models.Situation,
+    description: str,
+    time: int,
     _user_info: Annotated[Tuple[OIDCUser, models.Member], Depends(get_current_user_with_roles(required_roles=["mvg-member"]))],
-    recipe_repository: Annotated[CRUDRecipe, Depends(get_recipe_repository)]
+    recipe_repository: Annotated[CRUDRecipe, Depends(get_recipe_repository)],
+    image: Optional[UploadFile] = File(None),
 ) -> schemas.Recipe:
+    _, member = _user_info
+    image_url = None
+    recipe = schemas.RecipeCreate(
+        name=name,
+        situation=situation,
+        description=description,
+        time=time,
+        author_id=member.user_sub,
+        image_url=image_url
+    )
+
+    if image:
+        image_url = upload_image(image.file.read(), image.filename)
+
     try:
-        oidc_user, member = _user_info
-        recipe.author_id = member.id
+        recipe.image_url = image_url
+        
         db_recipe = recipe_repository.save_recipe(recipe)
         return schemas.Recipe.model_validate(db_recipe)
     except ValueError as err:
@@ -57,3 +76,12 @@ def delete_recipe(
         return {"detail": "Recipe deleted successfully"}
     except ValueError as err:
         raise HTTPException(status_code=404, detail=str(err))
+    
+
+@router.post("/image", operation_id="upload_recipe_image")
+def upload_recipe_image(
+    image: UploadFile
+) -> str:
+    content = image.file.read()
+    url = upload_image(content, image.filename)
+    return {"url": url}
