# src/schemas/recipe.py
@@ -1,6 +1,7 @@
 from datetime import datetime
 from typing import Optional, List
 
+from fastapi import UploadFile
 from pydantic import BaseModel, Field
 from .member import Member  
 from ..models.recipe import Situation
@@ -10,9 +11,10 @@ class RecipeBase(BaseModel):
     description: Optional[str] = Field(None, description="A brief description of the recipe.")
     time: Optional[int]
     situation: Situation
+    image_url: Optional[str]
 
 class RecipeCreate(RecipeBase):
-    author_id: Optional[int]
+    author_id: str
 
 class RecipeUpdate(RecipeBase):
     pass
@@ -20,6 +22,5 @@ class RecipeUpdate(RecipeBase):
 class Recipe(RecipeBase):
     id: int
     author: Optional[Member]
-
     class Config:
         from_attributes = True
